@@ -4721,7 +4721,7 @@ private static final long serialVersionUID = 0L;
           com.google.protobuf.LazyStringArrayList.emptyList();
       test_ = 0;
       auto_ = 0;
-      tdcoefficients_ = java.util.Collections.emptyList();
+      tdcoefficients_ = java.util.List.of();
     }
 
     public static final com.google.protobuf.Descriptors.Descriptor
@@ -5316,7 +5316,7 @@ private static final long serialVersionUID = 0L;
         ptest_ = 0D;
         autoAdjust_ = false;
         if (tdcoefficientsBuilder_ == null) {
-          tdcoefficients_ = java.util.Collections.emptyList();
+          tdcoefficients_ = java.util.List.of();
         } else {
           tdcoefficients_ = null;
           tdcoefficientsBuilder_.clear();
@@ -6089,7 +6089,7 @@ private static final long serialVersionUID = 0L;
       }
 
       private java.util.List<jdplus.toolkit.base.protobuf.toolkit.ToolkitProtos.Parameter> tdcoefficients_ =
-        java.util.Collections.emptyList();
+        java.util.List.of();
       private void ensureTdcoefficientsIsMutable() {
         if (!((bitField0_ & 0x00000200) != 0)) {
           tdcoefficients_ = new java.util.ArrayList<jdplus.toolkit.base.protobuf.toolkit.ToolkitProtos.Parameter>(tdcoefficients_);
@@ -6242,7 +6242,7 @@ private static final long serialVersionUID = 0L;
        */
       public Builder clearTdcoefficients() {
         if (tdcoefficientsBuilder_ == null) {
-          tdcoefficients_ = java.util.Collections.emptyList();
+          tdcoefficients_ = java.util.List.of();
           bitField0_ = (bitField0_ & ~0x00000200);
           onChanged();
         } else {
@@ -6673,10 +6673,10 @@ private static final long serialVersionUID = 0L;
       super(builder);
     }
     private RegressionSpec() {
-      outliers_ = java.util.Collections.emptyList();
-      users_ = java.util.Collections.emptyList();
-      interventions_ = java.util.Collections.emptyList();
-      ramps_ = java.util.Collections.emptyList();
+      outliers_ = java.util.List.of();
+      users_ = java.util.List.of();
+      interventions_ = java.util.List.of();
+      ramps_ = java.util.List.of();
     }
 
     public static final com.google.protobuf.Descriptors.Descriptor
@@ -7267,28 +7267,28 @@ private static final long serialVersionUID = 0L;
           easterBuilder_ = null;
         }
         if (outliersBuilder_ == null) {
-          outliers_ = java.util.Collections.emptyList();
+          outliers_ = java.util.List.of();
         } else {
           outliers_ = null;
           outliersBuilder_.clear();
         }
         bitField0_ = (bitField0_ & ~0x00000010);
         if (usersBuilder_ == null) {
-          users_ = java.util.Collections.emptyList();
+          users_ = java.util.List.of();
         } else {
           users_ = null;
           usersBuilder_.clear();
         }
         bitField0_ = (bitField0_ & ~0x00000020);
         if (interventionsBuilder_ == null) {
-          interventions_ = java.util.Collections.emptyList();
+          interventions_ = java.util.List.of();
         } else {
           interventions_ = null;
           interventionsBuilder_.clear();
         }
         bitField0_ = (bitField0_ & ~0x00000040);
         if (rampsBuilder_ == null) {
-          ramps_ = java.util.Collections.emptyList();
+          ramps_ = java.util.List.of();
         } else {
           ramps_ = null;
           rampsBuilder_.clear();
@@ -8037,7 +8037,7 @@ private static final long serialVersionUID = 0L;
       }
 
       private java.util.List<jdplus.toolkit.base.protobuf.modelling.ModellingProtos.Outlier> outliers_ =
-        java.util.Collections.emptyList();
+        java.util.List.of();
       private void ensureOutliersIsMutable() {
         if (!((bitField0_ & 0x00000010) != 0)) {
           outliers_ = new java.util.ArrayList<jdplus.toolkit.base.protobuf.modelling.ModellingProtos.Outlier>(outliers_);
@@ -8190,7 +8190,7 @@ private static final long serialVersionUID = 0L;
        */
       public Builder clearOutliers() {
         if (outliersBuilder_ == null) {
-          outliers_ = java.util.Collections.emptyList();
+          outliers_ = java.util.List.of();
           bitField0_ = (bitField0_ & ~0x00000010);
           onChanged();
         } else {
@@ -8277,7 +8277,7 @@ private static final long serialVersionUID = 0L;
       }
 
       private java.util.List<jdplus.toolkit.base.protobuf.modelling.ModellingProtos.TsVariable> users_ =
-        java.util.Collections.emptyList();
+        java.util.List.of();
       private void ensureUsersIsMutable() {
         if (!((bitField0_ & 0x00000020) != 0)) {
           users_ = new java.util.ArrayList<jdplus.toolkit.base.protobuf.modelling.ModellingProtos.TsVariable>(users_);
@@ -8430,7 +8430,7 @@ private static final long serialVersionUID = 0L;
        */
       public Builder clearUsers() {
         if (usersBuilder_ == null) {
-          users_ = java.util.Collections.emptyList();
+          users_ = java.util.List.of();
           bitField0_ = (bitField0_ & ~0x00000020);
           onChanged();
         } else {
@@ -8517,7 +8517,7 @@ private static final long serialVersionUID = 0L;
       }
 
       private java.util.List<jdplus.toolkit.base.protobuf.modelling.ModellingProtos.InterventionVariable> interventions_ =
-        java.util.Collections.emptyList();
+        java.util.List.of();
       private void ensureInterventionsIsMutable() {
         if (!((bitField0_ & 0x00000040) != 0)) {
           interventions_ = new java.util.ArrayList<jdplus.toolkit.base.protobuf.modelling.ModellingProtos.InterventionVariable>(interventions_);
@@ -8670,7 +8670,7 @@ private static final long serialVersionUID = 0L;
        */
       public Builder clearInterventions() {
         if (interventionsBuilder_ == null) {
-          interventions_ = java.util.Collections.emptyList();
+          interventions_ = java.util.List.of();
           bitField0_ = (bitField0_ & ~0x00000040);
           onChanged();
         } else {
@@ -8757,7 +8757,7 @@ private static final long serialVersionUID = 0L;
       }
 
       private java.util.List<jdplus.toolkit.base.protobuf.modelling.ModellingProtos.Ramp> ramps_ =
-        java.util.Collections.emptyList();
+        java.util.List.of();
       private void ensureRampsIsMutable() {
         if (!((bitField0_ & 0x00000080) != 0)) {
           ramps_ = new java.util.ArrayList<jdplus.toolkit.base.protobuf.modelling.ModellingProtos.Ramp>(ramps_);
@@ -8910,7 +8910,7 @@ private static final long serialVersionUID = 0L;
        */
       public Builder clearRamps() {
         if (rampsBuilder_ == null) {
-          ramps_ = java.util.Collections.emptyList();
+          ramps_ = java.util.List.of();
           bitField0_ = (bitField0_ & ~0x00000080);
           onChanged();
         } else {
